Wed Oct 25 00:08:01 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	From 2000-09-06 Angela Marie Thomas <angela@cygnus.com>:
	* infttrace.c (get_dictionary_entry_of_page): Function
	require_memory_page_dictionary takes no args.

Tue Oct 24 16:12:00 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* gdba.el: Delete file.
	* NEWS: Mention.

2000-10-23 David B Anderson <davea@sgi.com>

	* TODO: Correct spelling errors
	* command.c (_initialize_command) corelow.c (core_open)
	main.c (captured_command_loop) mips-tdep.c (mips32_next_pc)
	remote.c serial.h top.c utils.c config/nm-lynx.h:
	Correct spelling errors in comments

2000-10-22  Kevin Buettner  <kevinb@redhat.com>

	* sparc-nat.c (fetch_core_registers): Protoize.
	* sparcl-tdep.c (download): Protoize.

Fri Oct 20 19:08:47 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* MAINTAINERS: Add Fred Fish to Blanket Write Privs list.

2000-10-19  Kevin Buettner  <kevinb@redhat.com>

	* solib.c (LM_ADDR, LM_NEXT, LM_NAME, IGNORE_FIRST_LINK_MAP_ENTRY,
	open_symbol_file_object): Protoize.

2000-10-17  Kevin Buettner  <kevinb@redhat.com>

	* remote-vx29k.c (vx29k_frame_chain_valid): Protoize.
	* remote.c (remote_xfer_memory, remote_search): Protoize.
	* sol-thread.c (sol_thread_xfer_memory): Protoize.

2000-10-16  Peter Schauer  <pes@regent.e-technik.tu-muenchen.de>

	* sparc-tdep.c (sparc_fix_call_dummy):  Improve comments.
	Adjust call_dummy_breakpoint_offset, so that `finish' after a stop
	in a call dummy works.
	(sparc_gdbarch_init):  Fix setting of pc_in_call_dummy, it depends
	on SPARC32/64_CALL_DUMMY_ON_STACK, not DO_CALL_DUMMY_ON_STACK.

2000-10-15  Kevin Buettner  <kevinb@redhat.com>

	* remote-st.c (st2000_xfer_inferior_memory): Protoize.
	* remote-utils.c (gr_multi_scan): Protoize.
	* remote-vx.c (vx_xfer_memory, net_get_symbols): Protoize.

2000-10-13  Fernando Nasser  <fnasser@cygnus.com>

	* remote.c (putpkt_binary): Call read_frame, not getpkt. Log message.