@@ -1,3 +1,8 @@
+Wed Oct 25 01:19:26 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	* solib.c (open_symbol_file_object): Update function signature to
+ 	match catch_errors function argument.
+
 Wed Oct 25 00:08:01 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	From 2000-09-06 Angela Marie Thomas <angela@cygnus.com>:
